tests/bad/12_too_many_args_12.ris
int add(int a, int b):
    return a + b;

void main():
    add(4, 2, "foo");
    return;